--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "messagedigital/wkhtmltopdf-osx",
+    "name": "ukietech/wkhtmltopdf-osx",
     "description": "Convert html to pdf using webkit (qtwebkit). Static linked osx binary.",
     "keywords": ["pdf", "thumbnail", "snapshot", "wkhtmltopdf", "convert", "binary"],
     "license": "LGPL Version 3",
     "homepage": "https://code.google.com/p/wkhtmltopdf/",
     "authors": [
         {
-            "name": "Laurence Roberts",
-            "email": "laurence@message.co.uk"
+            "name": "Maxim Bilozub",
+            "email": "mbilozub@gmail.com"
         }
     ],
     "minimum-stability": "stable",
